<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <EditText
        android:id="@+id/editText_login_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/login_edittext_background"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/colorDeepIndigo"
        app:layout_constraintBottom_toTopOf="@+id/editText_login_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText_login_mobile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText_login_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_edittext_background"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/colorDeepIndigo"
        app:layout_constraintBottom_toTopOf="@+id/button_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText_login_mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_signin_background"
        android:text="@string/log_in"
        android:textColor="@color/colorIndigo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <Button
        android:id="@+id/button_signin2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText_login_mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_signin_background"
        android:text="Log in with Facebook"
        android:textColor="@color/colorIndigo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_signin"
        android:layout_below="@+id/button_signin"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_user"
        android:textColor="@color/colorPrimaryText"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_login_signup_button"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signin2" />

    <TextView
        android:id="@+id/textView_login_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_signin"
        android:layout_marginBottom="121dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button_signin2" />


    <ImageView
        android:id="@+id/login_logo_view"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_login_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        app:srcCompat="@drawable/logo_transparent" />


</android.support.constraint.ConstraintLayout>